# crucible

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  LICENSE  README.md  README_FULL.md  README_FULL_zh.md  README_zh.md  gunicorn_config.py  launch_webui.bat  launch_webui.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_crucible.py  run_crucible_enhanced.py
cloudflare/insights-worker/: .dev.vars.example  README.md  package-lock.json  package.json  wrangler.toml
cloudflare/insights-worker/migrations/: 0001_init.sql  0002_api_tokens.sql  0003_attribution.sql  0004_token_usage.sql  0005_contributors.sql  0006_distilled.sql  0007_contributor_scope.sql
cloudflare/insights-worker/scripts/: smoke.mjs
cloudflare/insights-worker/src/: admin.js  auth.js  canonical.js  corpus.js  event_shape.js  index.js  ingest.js  oauth_github.js  pages.js  quota.js  validate.js
cloudflare/insights-worker/test/: admin.test.js  attribution.test.js  auth.test.js  body_limit.test.js  canonical.test.js  contributor_scope.test.js  corpus.test.js  curation.test.js  delete.test.js  distilled.test.js  event_shape.test.js  ingest.test.js  oauth.test.js  quota.test.js  scope.test.js  validate.test.js
crucible/: README.md  SECTION_MANIFEST.md  __init__.py  __main__.py  _atomic_io.py  _env.py  _file_cache.py  _runtime_loader.py  _temp_runtime.py  analysis.py  bootstrap.py  cancellation.py  cli.py  context_budget.py  context_pressure.py  convergence_guard.py  cost_tracker.py  error_budget.py  errors.py  feature_registry.py  generate.py  hooks.py  http_retry.py  models.py  module_runtime.py  output_validation.py  progress.py  quality.py  research.py  resilience.py  run_correlation.py  runtime_api.py  runtime_logging.py  smoke_test.py  streaming.py  telemetry.py
crucible/config/: domain_pins.json
crucible/features/: __init__.py  agent_metrics.py  alt_data_connectors.py  api_version_autopatch.py  auth_manager.py  auto_remediator.py  backtest_runner.py  batch_runner.py  celery_worker.py  chat_bot.py  checkpoint.py  ci_cd.py  citation_verifier.py  code_lockfile_generator.py  code_quality.py  cointegration_analyzer.py  config_wizard.py  cross_reference_check.py  dependency_auditor.py  deployment_artifacts.py  diff_aware.py  document_ingestion.py  dynamic_correlation.py  external_data_connectors.py  factor_analyzer.py  few_shot_injector.py  github_repo_analyzer.py  global_knowledge_base.py  grafana_dashboard.py  independent_validator.py  interactive_mode.py  llm_quality_scorer.py  market_stream.py  mlflow_sink.py  mode_validation_matrix.py  model_cascade.py  monte_carlo.py  multi_project_compare.py  multilang_codegen.py  notification_hooks.py  (+33 more)
crucible/features/direction_debate/: __init__.py  consensus.py  critic.py
crucible/features/run_insights/: __init__.py  backends.py  cloud_sync.py  export.py  maintenance.py  recorder.py  redact.py  schema.py
crucible/modules/: __init__.py  section_00_bootstrap_and_utils.py  section_01_extraction_and_reformat.py  section_02_research_and_llm.py  section_03_models_and_context.py  section_04_web_research_and_direction.py  section_05_analysis_and_codegen.py  section_06_runtime_quality_api.py  section_07_selfcheck_output_main.py
crucible/web_research/: __init__.py  analysis_specs.py  async_runner.py  cooldown.py  crew_factory.py  dedup.py  domain_pins.py  fallback.py  health.py  http_clients.py  search_cache.py  swarm_specs.py  translate.py
crucible/web_research/providers/: __init__.py  crossref.py  openalex.py  searxng.py  tavily.py  wikipedia.py
scripts/: migrate_review_failure_type.py  migrate_run_meta_cost.py
tests/: conftest.py  test_analysis_handoff.py  test_auto_remediator.py  test_backtest_require_real_data_default.py  test_backtest_runner.py  test_batch_runner.py  test_cancellation.py  test_checkpoint.py  test_checkpoint_v2.py  test_ci_cd.py  test_cjk_grounding.py  test_code_quality.py  test_codegen_fix_loop_and_dotenv.py  test_context_budget.py  test_context_pressure.py  test_convergence_guard.py  test_cost_surfacing.py  test_cost_tracker.py  test_crew_factory.py  test_cross_reference_check.py  test_crucible_runtime.py  test_dependency_auditor.py  test_deployment_k8s.py  test_direction_comparator_score_clamp.py  test_direction_decision_options_coercion.py  test_direction_gate_feedback.py  test_enhanced_runner_cleanup.py  test_entrypoint_override.py  test_env_helpers.py  test_env_hot_reload.py  test_error_budget.py  test_errors.py  test_external_data_connectors.py  test_failure_banner.py  test_feature_registry.py  test_file_cache.py  test_gate_decision_extraction_not_from_report.py  test_generate_regeneration_guard.py  test_hooks.py  test_http_clients.py  (+83 more)
tests/regression/: __init__.py  golden_constraints.json  test_regression_runner.py
tests/regression/fixtures/SyntheticGoldenRun/: analysis_result.json  run_snapshot.json
tests/test_direction_debate_audit/: test_consensus.py  test_critic.py  test_isolation.py  test_ledger_events.py  test_regression_hard_cases.py  test_schema.py  test_wiring.py
tests/test_run_insights/: test_canonicalisation.py  test_concurrency.py  test_emit_points.py  test_export.py  test_js_canonical_parity.py  test_local_backend.py  test_recorder.py  test_redaction.py  test_redaction_patterns.py  test_signals_extraction.py  test_v8_float_repr.py
webui/: app.py
webui/static/css/: app.css
webui/static/js/: app.js
webui/templates/: index.html
