[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crucible"
# v1.1.2 (audit fix G6-D-HIGH-1): version was previously stuck at "1.0.0"
# despite six follow-on releases (v1.0.1 → v1.1.2).  Any wheel built from
# this source tree advertised itself as 1.0.0; ``importlib.metadata.version("crucible")``
# returned the wrong number; dependency-resolver pinning was incoherent.
# Keep this in sync with the latest CHANGELOG entry on every release.
version = "1.2.3"
description = "AI-native multi-agent research engine for quant, SaaS, agent, and scientific research workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE", "COMMERCIAL_LICENSE.md"]
authors = [
    { name = "Johnson Lai", email = "supervenus928@gmail.com" },
]
maintainers = [
    { name = "Johnson Lai", email = "supervenus928@gmail.com" },
]
keywords = [
    "multi-agent",
    "llm",
    "quant",
    "research",
    "codegen",
    "agent",
    "saas",
    "openrouter",
    "crewai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.urls]
Homepage = "https://github.com/Starlight143/crucible"
Repository = "https://github.com/Starlight143/crucible"
Issues = "https://github.com/Starlight143/crucible/issues"
Changelog = "https://github.com/Starlight143/crucible/blob/main/CHANGELOG.md"
"Commercial License" = "https://github.com/Starlight143/crucible/blob/main/COMMERCIAL_LICENSE.md"

[tool.setuptools]
packages = ["crucible", "crucible.modules", "crucible.features", "crucible.web_research"]
include-package-data = true

[tool.pytest.ini_options]
# Markers are also registered programmatically in ``tests/conftest.py``
# (``pytest_configure``) so a developer running pytest directly without
# pyproject sees the same registration.  Both must stay in sync.
markers = [
    "slow: marks tests as slow (> ~1s wall-clock); CI excludes by default",
    "network: marks tests that initiate real outbound network traffic",
    "integration: marks end-to-end tests covering multiple subsystems",
]
# Default scope: full suite minus opt-in heavy markers.  Override with
# ``pytest --override-ini='addopts=' tests/...`` to include them locally.
addopts = "-ra"

[tool.coverage.run]
source = ["crucible"]
branch = true
omit = [
    "crucible/modules/section_*.py",  # generated section files; tracked separately
]

[tool.coverage.report]
# A future cleanup pass will tighten this; for now we report without
# enforcing so CI does not fail on legacy gaps.
skip_covered = false
show_missing = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
    "saved_projects",
    "skill_staging",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"crucible/modules/section_*.py" = [
    "E402",
    "E731",
    "F401",
    "F811",
    "F821",
    "F841",
    "I001",
]

[tool.mypy]
python_version = "3.10"
# Coverage policy: every file in this list passes ``python -m mypy`` without
# error.  When a new file is added to ``crucible/`` it should either land in
# this list or be tracked separately for type-cleanup.  Adding the package as
# a whole (``crucible/``) is intentionally avoided — it would silently drag
# in modules whose third-party imports lack stubs and produce noise that
# masks real regressions.
files = [
    "crucible/__init__.py",
    "crucible/_env.py",
    "crucible/_file_cache.py",
    "crucible/_runtime_loader.py",
    "crucible/cancellation.py",
    "crucible/context_budget.py",
    "crucible/context_pressure.py",
    "crucible/convergence_guard.py",
    "crucible/cost_tracker.py",
    "crucible/error_budget.py",
    "crucible/errors.py",
    "crucible/feature_registry.py",
    "crucible/hooks.py",
    "crucible/http_retry.py",
    "crucible/models.py",
    "crucible/output_validation.py",
    "crucible/progress.py",
    "crucible/resilience.py",
    "crucible/run_correlation.py",
    "crucible/runtime_logging.py",
    "crucible/streaming.py",
    "crucible/telemetry.py",
    "crucible/web_research",
    "crucible/features/agent_metrics.py",
    "crucible/features/alt_data_connectors.py",
    "crucible/features/api_version_autopatch.py",
    "crucible/features/auth_manager.py",
    "crucible/features/backtest_runner.py",
    "crucible/features/celery_worker.py",
    "crucible/features/chat_bot.py",
    "crucible/features/checkpoint.py",
    "crucible/features/ci_cd.py",
    "crucible/features/code_lockfile_generator.py",
    "crucible/features/code_quality.py",
    "crucible/features/cointegration_analyzer.py",
    "crucible/features/config_wizard.py",
    "crucible/features/dependency_auditor.py",
    "crucible/features/deployment_artifacts.py",
    "crucible/features/diff_aware.py",
    "crucible/features/external_data_connectors.py",
    "crucible/features/grafana_dashboard.py",
    "crucible/features/global_knowledge_base.py",
    "crucible/features/independent_validator.py",
    "crucible/features/interactive_mode.py",
    "crucible/features/llm_quality_scorer.py",
    "crucible/features/mlflow_sink.py",
    "crucible/features/monte_carlo.py",
    "crucible/features/multi_project_compare.py",
    "crucible/features/multilang_codegen.py",
    "crucible/features/notification_hooks.py",
    "crucible/features/notion_export.py",
    "crucible/features/portfolio_backtest.py",
    "crucible/features/post_analysis_chat.py",
    "crucible/features/prompt_version_tracker.py",
    "crucible/features/regime_detector.py",
    "crucible/features/report_annotations.py",
    "crucible/features/report_exporter.py",
    "crucible/features/risk_attribution.py",
    "crucible/features/run_deduplication.py",
    "crucible/features/run_diff.py",
    "crucible/features/run_registry.py",
    "crucible/features/scheduler.py",
    "crucible/features/test_generator.py",
    "crucible/features/trading_platform.py",
    "crucible/features/transaction_cost_model.py",
    "crucible/features/type_coverage.py",
    "crucible/features/webhook_templates.py",
    "tests/test_env_helpers.py",
    "tests/test_resilience.py",
    "tests/test_runtime_logging.py",
]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
pretty = true
follow_imports = "skip"
exclude = "(^saved_projects/|^skill_staging/)"
disallow_untyped_defs = false
warn_return_any = false
no_implicit_reexport = false
